Changed VS layout
Added Engine/Core and Engine/Physics projects.  Moved Vector, entity,
and component to Core, added Physic compoent to Physics project.

--- a/CurlingGame/Physics/Physics.vcxproj.filters
+++ b/CurlingGame/Physics/Physics.vcxproj.filters
@@ -15,10 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\CurlingGame\Vector2.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\CurlingGame\Vector3.h">
+    <ClInclude Include="Inc\ComponentPhysics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
