--- a/CurlingGame/Physics/Physics.vcxproj
+++ b/CurlingGame/Physics/Physics.vcxproj
@@ -10,6 +10,9 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Inc\ComponentPhysics.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{84289798-EBD8-4884-8B51-3F3B65B2A2D3}</ProjectGuid>
     <RootNamespace>Physics</RootNamespace>
@@ -63,10 +66,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="..\CurlingGame\Vector2.h" />
-    <ClInclude Include="..\CurlingGame\Vector3.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
