Updated Entity and Component classes
Added a few properties to each class and added code to attach components
to entities.

--- a/CurlingGame/Core/Core.vcxproj.filters
+++ b/CurlingGame/Core/Core.vcxproj.filters
@@ -28,4 +28,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="source\Entity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Component.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
