Added Dependencies to components
Components now have a checkDependencies() function they need to
impliment.  This allows them to specifiy other components they require
to run.  These dependences are added if they're missing when the
component is added to an Entity.

--- a/CurlingGame/Core/Core.vcxproj.filters
+++ b/CurlingGame/Core/Core.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Inc\Vector3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Inc\ComponentPosition.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\Entity.cpp">
