--- a/CurlingGame/Core/Core.vcxproj
+++ b/CurlingGame/Core/Core.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Inc\Component.h" />
+    <ClInclude Include="Inc\ComponentPosition.h" />
     <ClInclude Include="Inc\Entity.h" />
     <ClInclude Include="Inc\Vector2.h" />
     <ClInclude Include="Inc\Vector3.h" />
