--- a/CurlingGame/Physics/Physics.vcxproj.filters
+++ b/CurlingGame/Physics/Physics.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="source\ComponentPhysics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
