--- a/GamePhysicsTestBedVS2012/GamePhysicsTestBedVS2012/GamePhysicsTestBedVS2012.vcxproj
+++ b/GamePhysicsTestBedVS2012/GamePhysicsTestBedVS2012/GamePhysicsTestBedVS2012.vcxproj
@@ -82,6 +82,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GamePhysicsTestBed.cpp" />
     <ClCompile Include="House.cpp" />
@@ -91,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FreeGLUTCallbacks.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GamePhysicsTestBed.h" />
     <ClInclude Include="House.h" />
