--- a/GamePhysicsTestBedVS2012/GamePhysicsTestBedVS2012/GamePhysicsTestBedVS2012.vcxproj
+++ b/GamePhysicsTestBedVS2012/GamePhysicsTestBedVS2012/GamePhysicsTestBedVS2012.vcxproj
@@ -46,6 +46,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(SolutionDir)ALSound\OpenAlSoft\include\AL;$(SolutionDir)Bullet\src;$(SolutionDir)LibOVR\Include;$(SolutionDir)FreeGLUT\include\GL;$(SolutionDir)OpenAlSoftSetup\OpenAlSoft\include\AL;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)LibOVR\Lib\Win32;$(SolutionDir)Bullet\lib;$(SolutionDir)FreeGLUT\lib\x86;$(LibraryPath)</LibraryPath>
+    <LibraryWPath>$(SolutionDir)ALSound\OpenAlSoft\lib\Win32;$(SolutionDir)Bullet\lib;$(SolutionDir)FreeGLUT\lib\x86;$(SolutionDir)LibOVR\Lib\Win32;$(SolutionDir)OpenAlSoftSetup\OpenAlSoft\lib\Win32;$(LibraryWPath)</LibraryWPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -73,12 +76,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\FreeGLUT\include;$(ProjectDir)..\LibOVR\Include;$(ProjectDir)..\Bullet\s;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>opengl32.lib;freeglut.lib;BulletDynamics_vs2010.lib;BulletCollision_vs2010.lib;LinearMath_vs2010.lib;libovr.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
